# MicroPython_K210_LoBo

./: .cproject  .gitignore  .gitmodules  .project  .pydevproject  README.md
k210-freertos/platform/sdk/kendryte-freertos-sdk/: CMakeLists.txt  README.md
k210-freertos/platform/sdk/kendryte-freertos-sdk/cmake/: compile-flags.cmake
k210-freertos/platform/sdk/kendryte-freertos-sdk/lds/: kendryte_2M.ld  kendryte_2_5M.ld  kendryte_3M.ld  kendryte_3_5M.ld  kendryte_kboot_2M.ld  kendryte_kboot_2_5M.ld  kendryte_kboot_3M.ld  kendryte_kboot_3_5M.ld
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/: CMakeLists.txt
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/arch/include/: encoding.h  iomem.h
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/bsp/: dump.c  entry_user.c  iomem.c  printf.c  syscalls.c
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/bsp/device/: dmac.cpp  dvp.cpp  gpiohs.cpp  i2c.cpp  i2s.cpp  pwm.cpp  rtc.cpp  spi.cpp  timer.cpp  uart.cpp
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/freertos/: os_entry.c  queue.c  tasks.c
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/freertos/conf/: FreeRTOSConfig.h
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/freertos/include/: FreeRTOS.h  devices.h  filesystem.h  hal.h  osdefs.h  portable.h  task.h
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/freertos/kernel/: device_priv.h  devices.cpp
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/freertos/portable/: heap_4.c  heap_5.c  portmacro.h
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/hal/: fpioa.c  uarths.c  utility.c
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/hal/include/: fpioa.h  spi.h  (+2 more)
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/posix/: pthread.cpp
k210-freertos/platform/sdk/kendryte-freertos-sdk/lib/utils/: syslog.c
k210-freertos/platform/sdk/kendryte-freertos-sdk/src/hello_world/: CMakeCache.txt
menuconfig/: CMakeLists.txt  lkc.h  mconf.c
menuconfig/lxdialog/: menubox.c
(+282 files in other folders)
